...
        <!--Application-->
        <scene sceneID="JPo-4y-FX3">
            <objects>
                <application id="hnw-xV-0zn" sceneMemberID="viewController">
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="menu-main-menu" userLabel="Main Menu">
                        <items>
                            <menuItem title="Write" id="menuitem-write" userLabel="Write">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Write" systemMenu="apple" id="menu-write-write" userLabel="Write &gt; Write">
                                    <items>
                                        <menuItem title="About Write" id="menuitem-write-about-write" userLabel="Write &gt; About Write">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
                                                <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
...
                                                <action selector="printDocument:" target="Ady-hI-5gd" id="qaZ-4w-aoO"/>
                                            </connections>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="Edit" id="menuitem-edit" userLabel="Edit">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Edit" id="menu-edit-edit" userLabel="Edit &gt; Edit">
                                    <items>
                                        <menuItem title="Undo" keyEquivalent="z" id="menuitem-edit-undo" userLabel="Edit &gt; Undo">
                                            <connections>
                                                <action selector="undo:" target="Ady-hI-5gd" id="M6e-cu-g7V"/>
...
                                        </menuItem>
                                        <menuItem title="Redo" keyEquivalent="Z" id="menuitem-edit-redo" userLabel="Edit &gt; Redo">
                                            <connections>
                                                <action selector="redo:" target="Ady-hI-5gd" id="oIA-Rs-6OD"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem title="History…" id="menuitem-edit-history" userLabel="Edit &gt; History…">
                                            <connections>
                                                <action selector="showHistory:" target="Ady-hI-5gd" id="history-menu-action"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="WRV-NI-Exz"/>
                                        <menuItem title="Cut" keyEquivalent="x" id="menuitem-edit-cut" userLabel="Edit &gt; Cut">
...
